chrome spacing fix

--- a/main.scss
+++ b/main.scss
@@ -32,7 +32,6 @@ html, body {
 header {
   display: flex;
   width: 100%;
-  height: 0;
   flex: 0 0 0;
   margin-top: 2rem;
 }
@@ -59,6 +58,8 @@ header {
 main {
   flex: 1 0 auto;
 }
+
+p
 
 footer {
   color: $gray3;
